--- a/arpanet.html
+++ b/arpanet.html
@@ -19,10 +19,9 @@
 	<table class="tabella2" >
         <tr>
           <td class="testo">ARPANET (acronimo di "Advanced Research Projects Agency NETwork", in italiano "Rete dell'Agenzia per i progetti di ricerca avanzati"), anche scritto ARPAnet o Arpanet, fu una rete di computer studiata e realizzata nel 1969 dal DARPA, l'agenzia del Dipartimento della Difesa degli Stati Uniti responsabile per lo sviluppo di nuove tecnologie ad uso militare. Si tratta della forma per così dire embrionale dalla quale poi nel 1983 nacque Internet.</td>
-          <td class="foto"><a href="https://it.wikipedia.org/wiki/ARPANET" target="a"><img src="arpanet.jpg" title="Logo Arpanet"></a>
-          </td>
+          <td class="foto"><a href="https://it.wikipedia.org/wiki/ARPANET" target="a"><img src="arpanet.jpg" title="Logo Arpanet"></a></td>
         </tr>
-		<br><br><br>
+<br><br><br>
         </table>
         <table class="tabella2" >
         <tr>
@@ -37,6 +36,15 @@ definitivo protocollo su cui ancor oggi opera Internet, il TCP/IP.</td>
 <table >
   <tr>
     <td class="testo">Arpanet fu pensata per scopi militari statunitensi durante la guerra fredda, ma paradossalmente ne nacque uno dei più grandi progetti civili : una rete globale che collega tutta la Terra. Nel 1958 il Governo USA decise di creare un istituto di ricerca denominato ARPA e il suo compito era ambizioso : cercare soluzioni tecnologiche innovative. Fra gli incarichi dell’Agenzia c’era quello di trovare una soluzione alle problematiche legate alla sicurezza e alla disponibilità di una rete di telecomunicazioni.</td>
-    <td>
+	<td class="foto"><a href="" target="c"><img src=".jpg" title=""></a>
+</tr>
+</table>
+	  </table>
+<table >
+  <tr>
+    <td class="testo">Arpanet fu pensata per scopi militari statunitensi durante la guerra fredda, ma paradossalmente ne nacque uno dei più grandi progetti civili : una rete globale che collega tutta la Terra. Nel 1958 il Governo USA decise di creare un istituto di ricerca denominato ARPA e il suo compito era ambizioso : cercare soluzioni tecnologiche innovative. Fra gli incarichi dell’Agenzia c’era quello di trovare una soluzione alle problematiche legate alla sicurezza e alla disponibilità di una rete di telecomunicazioni.</td>
+	<td class="foto"><a href="" target="c"><img src=".jpg" title=""></a>
+</tr>
+</table>
   </body>
 </html>
