--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			</tr>
 		</table>
 		<br><br>
-		<center><img src=""></center>
+		<center><img src="storia.png"></center>
 	</body>
 			
 </html>
