--- a/home.html
+++ b/home.html
@@ -44,4 +44,7 @@ Processor, IMP) con il compito specifico di gestire le
 comunicazioni con gli altri nodi.</td>
   </tr>
   </body>
+	
+  <br><br>
+  <center><img src="storia.png"></center>
 </html>
