--- a/arpanet.html
+++ b/arpanet.html
@@ -17,34 +17,46 @@
 		<a href="xanadu.html">Xanadu</a>
 	</div>
 	<table class="tabella2" >
-        <tr>
-          <td class="testo">ARPANET (acronimo di "Advanced Research Projects Agency NETwork", in italiano "Rete dell'Agenzia per i progetti di ricerca avanzati"), anche scritto ARPAnet o Arpanet, fu una rete di computer studiata e realizzata nel 1969 dal DARPA, l'agenzia del Dipartimento della Difesa degli Stati Uniti responsabile per lo sviluppo di nuove tecnologie ad uso militare. Si tratta della forma per così dire embrionale dalla quale poi nel 1983 nacque Internet.</td>
-          <td class="foto"><a href="https://it.wikipedia.org/wiki/ARPANET" target="a"><img src="arpanet.jpg" title="Logo Arpanet"></a></td>
-        </tr>
-<br><br><br>
-        </table>
+           <tr>
+          	<td class="testo">ARPANET (acronimo di "Advanced Research Projects Agency NETwork", in italiano "Rete dell'Agenzia per i progetti di ricerca avanzati"), anche scritto ARPAnet o Arpanet, fu una rete di computer studiata e realizzata nel 1969 dal DARPA, l'agenzia del Dipartimento della Difesa degli Stati Uniti responsabile per lo sviluppo di nuove tecnologie ad uso militare. Si tratta della forma per così dire embrionale dalla quale poi nel 1983 nacque Internet.</td>
+          	<td class="foto"><a href="https://it.wikipedia.org/wiki/ARPANET" target="a"><img src="arpanet.jpg" title="Logo Arpanet"></a></td>
+       	   </tr>
+	</table>
+	  
         <table class="tabella2" >
-        <tr>
-          <td class="foto"><a href="https://it.wikipedia.org/wiki/Defense_Advanced_Research_Projects_Agency" target="b"><img src="arpa.jpg" title="Logo di Arpa"></a></td>
-          <td class="testo">L'ARPA (poi DARPA a partire dal marzo 1972) venne creata dal Governo degli Stati Uniti nel 1958 in risposta al lancio in orbita dello Sputnik da parte dell'Unione Sovietica. Nella corsa allo spazio gli Stati Uniti dovevano riconquistare e mantenere il loro vantaggio tecnologico – e strategico – nei confronti del blocco sovietico e avevano la necessità di creare un agenzia ad hoc che gli permettesse di farlo. Nel 1973 Robert Kahn, di ARPA, e Vinton Cerf, della Stanford University, misero per iscritto la struttura
-di Internet. Sempre nello stesso anno fu istituito il progetto del protocollo di controllo
-trasmissione (TCP), standard indispensabile per la comunicazione tra reti di computer.
-Nel 1978 Cerf, Postel e Crocker hanno aggiunto un protocollo tra rete e rete (IP), mettendo a punto il
-definitivo protocollo su cui ancor oggi opera Internet, il TCP/IP.</td>
+          <tr>
+         	 <td class="foto"><a href="https://it.wikipedia.org/wiki/Defense_Advanced_Research_Projects_Agency" target="b"><img src="arpa.jpg" title="Logo di Arpa"></a></td>
+          	 <td class="testo">L'ARPA (poi DARPA a partire dal marzo 1972) venne creata dal Governo degli Stati Uniti nel 1958 in risposta al lancio in orbita dello Sputnik da parte dell'Unione Sovietica. Nella corsa allo spazio gli Stati Uniti dovevano riconquistare e mantenere il loro vantaggio tecnologico – e strategico – nei confronti del blocco sovietico e avevano la necessità di creare un agenzia ad hoc che gli permettesse di farlo. Nel 1973 Robert Kahn, di ARPA, e Vinton Cerf, della Stanford University, misero per iscritto la struttura
+		di Internet. Sempre nello stesso anno fu istituito il progetto del protocollo di controllo
+		trasmissione (TCP), standard indispensabile per la comunicazione tra reti di computer.
+		Nel 1978 Cerf, Postel e Crocker hanno aggiunto un protocollo tra rete e rete (IP), mettendo a punto il
+		definitivo protocollo su cui ancor oggi opera Internet, il TCP/IP.</td>
         </tr>
-</table>
-<table >
+	</table>
+<table class"tabella2" >
   <tr>
     <td class="testo">Arpanet fu pensata per scopi militari statunitensi durante la guerra fredda, ma paradossalmente ne nacque uno dei più grandi progetti civili : una rete globale che collega tutta la Terra. Nel 1958 il Governo USA decise di creare un istituto di ricerca denominato ARPA e il suo compito era ambizioso : cercare soluzioni tecnologiche innovative. Fra gli incarichi dell’Agenzia c’era quello di trovare una soluzione alle problematiche legate alla sicurezza e alla disponibilità di una rete di telecomunicazioni.</td>
-	<td class="foto"><a href="" target="c"><img src=".jpg" title=""></a>
+    <td class="foto"><a href="https://it.wikipedia.org/wiki/Guerra_fredda" target="c"><img src="guerra fredd.png" title="Simbolo del conflitto"></a>
+ </tr>
+</table>
+	 
+<table class="tabella2" >
+  <tr>
+    <td class="foto"><a href="" target="d"><img src=".jpg" title=""></a>
+    <td class="testo">Il progetto fu sviluppato negli anni Sessanta in piena guerra fredda con la collaborazione di varie università americane, e, secondo molte fonti, aveva lo scopo di costruire una rete di comunicazione militare in grado di resistere anche ad un attacco nucleare su vasta scala. Per tutti gli anni Settanta ARPAnet continuò a svilupparsi in ambito universitario e governativo, ma dal 1974, con l’avvento dello standard di trasmissione TCP/IP il progetto della rete prese ad essere denominato Internet.</td>	  
 </tr>
 </table>
-	  </table>
-<table >
-  <tr>
-    <td class="testo">Arpanet fu pensata per scopi militari statunitensi durante la guerra fredda, ma paradossalmente ne nacque uno dei più grandi progetti civili : una rete globale che collega tutta la Terra. Nel 1958 il Governo USA decise di creare un istituto di ricerca denominato ARPA e il suo compito era ambizioso : cercare soluzioni tecnologiche innovative. Fra gli incarichi dell’Agenzia c’era quello di trovare una soluzione alle problematiche legate alla sicurezza e alla disponibilità di una rete di telecomunicazioni.</td>
-	<td class="foto"><a href="" target="c"><img src=".jpg" title=""></a>
-</tr>
+<table class="tabella2">
+	<tr>
+		<td class="testo">È negli anni Ottanta, grazie all’avvento dei personal computer, che un primo grande impulso alla diffusione della rete al di fuori degli ambiti più istituzionali e accademici ebbe il suo successo, rendendo di fatto potenzialmente collegabili centinaia di migliaia di utenti. Fu così che gli utenti istituzionali e militari cominciarono a rendere partecipi alla rete i membri della comunità scientifica, che iniziarono così a scambiarsi informazioni e dati, ma anche messaggi estemporanei ed a coinvolgere, a loro volta, altri utenti comuni. Nacquero in questo modo, spontaneamente, l’e-mail, i primi news group e di fatto una rete : Internet.</td>
+		<td classe="foto"><a href="" target="e"><img src="collegamenti.jpg" title=""></a>
+	</tr>
+</table>
+<table class="tabella2">
+	<tr>
+		<td class="foto"><a href="https://it.wikipedia.org/wiki/MILNET" target="f"><img src="milnet.jpg" title="Logo Milnet"></a>
+		<td class="testo">Nel 1983 ARPA esaurì il suo scopo, lo stato chiuse l’erogazione di fondi pubblici, la sezione militare si isolò, necessitando di segretezza assoluta a protezione delle proprie informazioni, e nacque perciò MILNET. Con il passare del tempo, l’esercito si disinteressò sempre più del progetto, che rimase sotto il pieno controllo delle università, diventando un utile strumento per scambiare le conoscenze scientifiche e per comunicare.</td>
+	</tr>
 </table>
   </body>
 </html>
