--- a/home.html
+++ b/home.html
@@ -46,5 +46,5 @@ comunicazioni con gli altri nodi.</td>
   </body>
 	
   <br><br>
-  <center><img src="storia.png"></center>
+  <center><img style="max-width: 100%" src="storia.png"></center>
 </html>
