--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 					</ul>
 				</td>
 				<td class="pagina">
-					<iframe frameBorder="0" src="arpanet.html" name="cont" height=100% width=100%>
+					<iframe frameBorder="0" src="home.html" name="cont" height=100% width=100%>
 				</td>
 			</tr>
 		</table>
