--- a/home.html
+++ b/home.html
@@ -43,7 +43,8 @@ piccole dimensioni (battezzato Interface Message
 Processor, IMP) con il compito specifico di gestire le
 comunicazioni con gli altri nodi.</td>
   </tr>
+</table>
   <br><br>
-	<center><img style="max-width: 100%" src="storia.png"></center>
+   <center><img style="max-width: 100%" src="storia.png"></center>
   </body>
 </html>
