--- a/arpanet.html
+++ b/arpanet.html
@@ -44,7 +44,7 @@
 <table class="tabella2">
 	<tr>
 		
-		<td classe="foto"><a href="" target="e"><img src="collegamenti.jpg" title="" style="max-width:30vw"></a>
+		<td classe="foto"><img src="collegamenti.jpg"style="max-width:25vw"></td>
 		<td class="testo">È negli anni Ottanta, grazie all’avvento dei personal computer, che un primo grande impulso alla diffusione della rete al di fuori degli ambiti più istituzionali e accademici ebbe il suo successo, rendendo di fatto potenzialmente collegabili centinaia di migliaia di utenti. Fu così che gli utenti istituzionali e militari cominciarono a rendere partecipi alla rete i membri della comunità scientifica, che iniziarono così a scambiarsi informazioni e dati, ma anche messaggi estemporanei ed a coinvolgere, a loro volta, altri utenti comuni. Nacquero in questo modo, spontaneamente, l’e-mail, i primi news group e di fatto una rete : Internet.</td>
 	</tr>
 </table>
