--- a/arpanet.html
+++ b/arpanet.html
@@ -41,7 +41,7 @@
     
     <td class="testo">Arpanet fu pensata per scopi militari statunitensi durante la guerra fredda, ma paradossalmente ne nacque uno dei più grandi progetti civili : una rete globale che collega tutta la Terra. Nel 1958 il Governo USA decise di creare un istituto di ricerca denominato ARPA e il suo compito era ambizioso : cercare soluzioni tecnologiche innovative. Fra gli incarichi dell’Agenzia c’era quello di trovare una soluzione alle problematiche legate alla sicurezza e alla disponibilità di una rete di telecomunicazioni.
 	    Il progetto fu sviluppato negli anni Sessanta in piena guerra fredda con la collaborazione di varie università americane, e, secondo molte fonti, aveva lo scopo di costruire una rete di comunicazione militare in grado di resistere anche ad un attacco nucleare su vasta scala. Per tutti gli anni Settanta ARPAnet continuò a svilupparsi in ambito universitario e governativo, ma dal 1974, con l’avvento dello standard di trasmissione TCP/IP il progetto della rete prese ad essere denominato Internet.</td>	
-	  <td class="foto"><a href="https://it.wikipedia.org/wiki/Guerra_fredda" target="d"><img src="guerra fredd.png" title="Simbolo del conflitto"></a></td>
+	  <td class="foto"><a href="https://it.wikipedia.org/wiki/Guerra_fredda" target="d"><img src="guerra fredd.png"style="max-widht:25vw" title="Simbolo del conflitto"></a></td>
 </tr>
 </table>
 	  <br><br>
