--- a/ipertestualita.html
+++ b/ipertestualita.html
@@ -8,8 +8,7 @@
     <title>ARPANET</title>
   </head>
   <body style="background-color:powderblue;">
-    <p ><strong style="color:red; font-family:Tomorrow; font-size:4vw" ><center>ARPANET e IPERTESTUALITA'
-    </center></strong></p>
+    <p ><strong style="color:red; font-family:Tomorrow; font-size:4vw" ><center>ARPANET e IPERTESTUALITA </center></strong></p>
 	<br><br>
 	
         
