--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
     <title>ARPANET</title>
   </head>
   <body style="background-color:powderblue;">
-    <p ><strong style="color:red; font-family:Tomorrow; font-size:4vw" ><center>STORIA DI INTERNET</center></strong></p>
+    <p><strong style="color:red; font-family:Tomorrow; font-size:4vw" ><center>STORIA DI INTERNET</center></strong></p>
 	<br><br>
 	<div class="menul"style="padding-left:0px; background-color:green;">
 		<a href="arpanet.html">ARPANET</a>
@@ -46,6 +46,7 @@ comunicazioni con gli altri nodi.</td>
   </tr>
 </table>
   <br><br>
+	  <p class="testo">Dall' anno della sua nascita nel 1961, il web ha subito numerosi cambiamenti e aggiunte, come il protocollo HTTP, il linguaggio di programmazione HTML, i primi browser e i primi linguaggi di programmazione.</p>
    <center><img style="max-width: 100%" src="storia.png"></center>
   </body>
 </html>
