--- a/xanadu.html
+++ b/xanadu.html
@@ -7,9 +7,18 @@
     <meta charset="utf-8">
     <title>ARPANET</title>
   </head>
+
   <body style="background-color:powderblue;">
     <p ><strong style="color:red; font-family:Tomorrow; font-size:4vw" ><center>ARPANET e IPERTESTUALITA'
     </center></strong></p>
+	<br><br>
+	<div class="menul"style="padding-left:0px; background-color:green;">
+		<a href="arpanet.html">ARPANET</a>
+		<a href="ipertestualita.html">Ipertestualità</a>
+		<a href="xanadu.html">Xanadu</a>
+	</div>
+  <body style="background-color:powderblue;">
+    <p ><strong style="color:red; font-family:Tomorrow; font-size:4vw" ><center>PROGETTO XANADU</center></strong></p>
 	<br><br>
 	
 <table class="tabella2" >
