--- a/xanadu.html
+++ b/xanadu.html
@@ -16,18 +16,18 @@
 		<a href="ipertestualita.html">Ipertestualità</a>
 		<a href="xanadu.html">Xanadu</a>
 	</div>
+	  <br><br>
 	
 <table class="tabella2" >
         <tr>
-          <td clss="foto"><a href="https://it.wikipedia.org/wiki/Progetto_Xanadu" target="d"><img src="xanadu.png"  title="Ted Nelson: inventore del progetto Xanadu"></a></td>
-          <td
-          class="testo">Il progetto Xanadu è stato tra i primi progetti informatici a fare uso di ipertesti. Fondato nel 1960 da Ted Nelson, il progetto ha attraversato una lunga fase di implementazione che si è conclusa soltanto nel 1998 con la pubblicazione del software completo.
-
-Durante il suo primo anno di dottorato di ricerca ad Harvard, Ted Nelson cominciò ad utilizzare il sistema che conteneva l'abbozzo di quello che doveva diventare il progetto Xanadu: un programma di scrittura testi (il termine word processor comparve diversi anni più tardi) capace di memorizzare più versioni dello stesso scritto (ovvero tutta la cronologia delle modifiche) e capace di visualizzare le differenze tra le diverse versioni. Nelson non riuscì all'epoca a portare a termine l'implementazione, tuttavia una dimostrazione del sistema si dimostrò sufficiente per attirare l'interesse sul progetto.
-
- </td>
-
-        </tr>
+		  <td class="foto"><a href="https://it.wikipedia.org/wiki/Progetto_Xanadu" target="d"><img src="xanadu.png"  title="Ted Nelson: inventore del progetto Xanadu"></a></td>
+		  <td class="testo">Il progetto Xanadu è stato tra i primi progetti informatici a fare uso di ipertesti. Fondato nel 1960 da Ted Nelson, il progetto ha attraversato una lunga fase di implementazione che si è conclusa soltanto nel 1998 con la pubblicazione del software completo. Durante il suo primo anno di dottorato di ricerca ad Harvard, Ted Nelson cominciò ad utilizzare il sistema che conteneva l'abbozzo di quello che doveva diventare il progetto Xanadu: un programma di scrittura testi (il termine word processor comparve diversi anni più tardi) capace di memorizzare più versioni dello stesso scritto (ovvero tutta la cronologia delle modifiche) e capace di visualizzare le differenze tra le diverse versioni. Nelson non riuscì all'epoca a portare a termine l'implementazione, tuttavia una dimostrazione del sistema si dimostrò sufficiente per attirare l'interesse sul progetto.
+	</td></tr>
+	<td>
+		<tr class="testo">
+			Durante il suo primo anno di dottorato di ricerca ad Harvard, Ted Nelson cominciò ad utilizzare il sistema che conteneva l'abbozzo di quello che doveva diventare il progetto Xanadu: un programma di scrittura testi (il termine word processor comparve diversi anni più tardi) capace di memorizzare più versioni dello stesso scritto (ovvero tutta la cronologia delle modifiche) e capace di visualizzare le differenze tra le diverse versioni. Nelson non riuscì all'epoca a portare a termine l'implementazione, tuttavia una dimostrazione del sistema si dimostrò sufficiente per attirare l'interesse sul progetto. 
+		</tr>
+		<tr class="foto"><a href="https://kottke.org/14/06/pioneering-hypertext-project-xanadu-released-after-54-years"><img src="https://kottke.org/plus/misc/images/Screenshot%202014-06-05%2008.56.42.png"></a></td>
 </table>
   </body>
 </html>
