--- a/xanadu.html
+++ b/xanadu.html
@@ -27,7 +27,9 @@
 		<tr class="testo">
 			Durante il suo primo anno di dottorato di ricerca ad Harvard, Ted Nelson cominciò ad utilizzare il sistema che conteneva l'abbozzo di quello che doveva diventare il progetto Xanadu: un programma di scrittura testi (il termine word processor comparve diversi anni più tardi) capace di memorizzare più versioni dello stesso scritto (ovvero tutta la cronologia delle modifiche) e capace di visualizzare le differenze tra le diverse versioni. Nelson non riuscì all'epoca a portare a termine l'implementazione, tuttavia una dimostrazione del sistema si dimostrò sufficiente per attirare l'interesse sul progetto. 
 		</tr>
-		<tr class="foto"><a href="https://kottke.org/14/06/pioneering-hypertext-project-xanadu-released-after-54-years"><img src="https://kottke.org/plus/misc/images/Screenshot%202014-06-05%2008.56.42.png"></a></td>
+		<tr class="foto"><a href="https://kottke.org/14/06/pioneering-hypertext-project-xanadu-released-after-54-years"><img src="https://kottke.org/plus/misc/images/Screenshot%202014-06-05%2008.56.42.png"></a>
+		</tr>
+	</td>
 </table>
   </body>
 </html>
