--- a/ipertestualita.html
+++ b/ipertestualita.html
@@ -10,7 +10,13 @@
   <body style="background-color:powderblue;">
     <p ><strong style="color:red; font-family:Tomorrow; font-size:4vw" ><center>ARPANET e IPERTESTUALITA </center></strong></p>
 	<br><br>
-	
+	< div  class = " menul " style = " padding-left : 0 px ; colore di sfondo : verde ; " >
+		<a name="Inizio"></a>
+		< Un  href = " arpanet.html " > di ARPANET </ a >
+		< Un  href = " ipertestualita.html " > Ipertestualità </ a >
+		< Un  href = " xanadu.html " > Xanadu </ a >
+	</ div >
+	  <br><br><br>
         
 <table class="tabella2" >
         <tr>
@@ -38,5 +44,8 @@
 			Tessere: Le unità testuali sono delle piccole porzioni di storia che assumono un determinato senso nel momento in cui sono inserite in un contesto, e a seconda dei contesti assumono significati differenti. La navigazione tramite link costruisce il contesto all'interno del quale le porzioni di testo assumono il proprio significato.
 L'analogia è con le tessere di un mosaico che assumono, a seconda della posizione nel contesto e delle tessere contigue, significati differenti. </td>
 		<td class="foto"><a href="" target="c"><img src="" title=""></a></td>
+	</tr>
+	  </table>
+<a href="#Inizio">Vai a inizio pagina</a>
   </body>
 </html>
