--- a/arpanet.html
+++ b/arpanet.html
@@ -20,14 +20,14 @@
 	<table class="tabella2" >
            <tr>
           	<td class="testo">ARPANET (acronimo di "Advanced Research Projects Agency NETwork", in italiano "Rete dell'Agenzia per i progetti di ricerca avanzati"), anche scritto ARPAnet o Arpanet, fu una rete di computer studiata e realizzata nel 1969 dal DARPA, l'agenzia del Dipartimento della Difesa degli Stati Uniti responsabile per lo sviluppo di nuove tecnologie ad uso militare. Si tratta della forma per così dire embrionale dalla quale poi nel 1983 nacque Internet.</td>
-          	<td class="foto"><a href="https://it.wikipedia.org/wiki/ARPANET" target="a"><img src="arpanet.jpg" title="Logo Arpanet"></a></td>
+          	<td class="foto"><a href="https://it.wikipedia.org/wiki/ARPANET" target="a"><img src="arpanet.jpg"style="max-width:50vw" title="Logo Arpanet"></a></td>
        	   </tr>
 	</table>
 	  <br><br>
 	  
         <table class="tabella2" >
           <tr>
-         	 <td class="foto"><a href="https://it.wikipedia.org/wiki/Defense_Advanced_Research_Projects_Agency" target="b"><img src="arpa.jpg" title="Logo di Arpa"></a></td>
+         	 <td class="foto"><a href="https://it.wikipedia.org/wiki/Defense_Advanced_Research_Projects_Agency" target="b"><img src="arpa.jpg"style="max-width:50vw" title="Logo di Arpa"></a></td>
           	 <td class="testo">L'ARPA (poi DARPA a partire dal marzo 1972) venne creata dal Governo degli Stati Uniti nel 1958 in risposta al lancio in orbita dello Sputnik da parte dell'Unione Sovietica. Nella corsa allo spazio gli Stati Uniti dovevano riconquistare e mantenere il loro vantaggio tecnologico – e strategico – nei confronti del blocco sovietico e avevano la necessità di creare un agenzia ad hoc che gli permettesse di farlo. Nel 1973 Robert Kahn, di ARPA, e Vinton Cerf, della Stanford University, misero per iscritto la struttura
 		di Internet. Sempre nello stesso anno fu istituito il progetto del protocollo di controllo
 		trasmissione (TCP), standard indispensabile per la comunicazione tra reti di computer.
@@ -56,7 +56,7 @@
 	<tr>
 		
 		<td class="testo">Nel 1983 ARPA esaurì il suo scopo, lo stato chiuse l’erogazione di fondi pubblici, la sezione militare si isolò, necessitando di segretezza assoluta a protezione delle proprie informazioni, e nacque perciò MILNET. Con il passare del tempo, l’esercito si disinteressò sempre più del progetto, che rimase sotto il pieno controllo delle università, diventando un utile strumento per scambiare le conoscenze scientifiche e per comunicare.</td>
-		<td class="foto"><a href="https://it.wikipedia.org/wiki/MILNET" target="f"><img src="milnet.jpg" title="Logo Milnet"></a>
+		<td class="foto"><a href="https://it.wikipedia.org/wiki/MILNET" target="f"><img src="milnet.jpg" style="max-width:50vw" title="Logo Milnet"></a>
 	</tr>
 </table>
   </body>
