--- a/ipertestualita.html
+++ b/ipertestualita.html
@@ -10,10 +10,11 @@
   <body style="background-color:powderblue;">
     <p ><strong style="color:red; font-family:Tomorrow; font-size:4vw" ><center>ARPANET e IPERTESTUALITA </center></strong></p>
 	<br><br>
-	< div  class = " menul " style = " padding-left : 0 px ; colore di sfondo : verde ; a name="Inizio"></a> >
-		< Un  href = " arpanet.html " > di ARPANET </ a >
-		< Un  href = " ipertestualita.html " > Ipertestualità </ a >
-		< Un  href = " xanadu.html " > Xanadu </ a >
+	< div  class = " menul " style = " padding-left : 0 px ; background-color : green;">
+		<a name="Inizio"></a>
+		< a  href = " arpanet.html " > di ARPANET </ a >
+		< a  href = " ipertestualita.html " > Ipertestualità </ a >
+		< a  href = " xanadu.html " > Xanadu </ a >
 	</ div >
 	  <br><br><br>
         
