--- a/ipertestualita.html
+++ b/ipertestualita.html
@@ -16,6 +16,11 @@
 		< a  href = " ipertestualita.html " > Ipertestualità </ a >
 		< a  href = " xanadu.html " > Xanadu </ a >
 	</ div >
+	  <div class="menul"style="padding-left:0px; background-color:green;">
+		<a href="arpanet.html">ARPANET</a>
+		<a href="ipertestualita.html">Ipertestualità</a>
+		<a href="xanadu.html">Xanadu</a>
+	</div>
 	  <br><br><br>
         
 <table class="tabella2" >
