--- a/xanadu.html
+++ b/xanadu.html
@@ -29,7 +29,15 @@
 <table class="tabella2" >
         <tr>
 		<td class="testo">Durante il suo primo anno di dottorato di ricerca ad Harvard, Ted Nelson cominciò ad utilizzare il sistema che conteneva l'abbozzo di quello che doveva diventare il progetto Xanadu: un programma di scrittura testi (il termine word processor comparve diversi anni più tardi) capace di memorizzare più versioni dello stesso scritto (ovvero tutta la cronologia delle modifiche) e capace di visualizzare le differenze tra le diverse versioni. Nelson non riuscì all'epoca a portare a termine l'implementazione, tuttavia una dimostrazione del sistema si dimostrò sufficiente per attirare l'interesse sul progetto. 
-		<td class="foto"><a href="https://kottke.org/14/06/pioneering-hypertext-project-xanadu-released-after-54-years" target="d"><img src="https://kottke.org/plus/misc/images/Screenshot%202014-06-05%2008.56.42.png"  title="Esempio di riferimenti nel testo"></a></td>
+		<td class="foto"><a href="https://kottke.org/14/06/pioneering-hypertext-project-xanadu-released-after-54-years" target="d"><img class="foto" src="https://kottke.org/plus/misc/images/Screenshot%202014-06-05%2008.56.42.png"  title="Esempio di riferimenti nel testo"></a></td>
+	</td></tr>
+	  
+</table>
+<br><br>
+<table class="tabella2" >
+        <tr>
+		<td class="foto"><a href="https://help.typeform.com/hc/en-us/articles/360029116392-What-is-Logic-Jump-" target="d"><img class="foto" src="https://d1nt04ao0vck22.cloudfront.net/uploads/2015/07/16143421/what-is-logic-jump-2019-3.png"  title="Esempio di riferimenti nel testo"></a></td>
+		<td class="testo">L'idea base di Nelson era di facilitare la scrittura non sequenziale, che dà al lettore una possibilità in più: quella di poter scegliere il proprio percorso. Il tutto utilizzando l'informatica. Espose questa idea il 24 agosto 1965 alla conferenza annuale dell'Association for Computing Machinery (ACM) a Cleveland. Titolo della relazione: "Una struttura di archivio per l'insieme, per il cambiamento e per l'indeterminato" (A File Structure for The Complex, The Changing and the Indeterminate). Definì la sua idea "elenchi a cerniera" (zippered lists). Questi elenchi permettevano ai documenti composti di essere formati da parti di altri documenti, un concetto definito transclusione. Essi andavano poi collegati (linkati diremmo oggi) ad altri documenti che presentavano argomenti simili.</td> 
 	</td></tr>
 	  
 </table>
