--- a/xanadu.html
+++ b/xanadu.html
@@ -36,7 +36,7 @@
 <br><br>
 <table class="tabella2" >
         <tr>
-		<td class="foto"><a href="https://help.typeform.com/hc/en-us/articles/360029116392-What-is-Logic-Jump-" target="d"><img class="foto" src="https://www.focusjunior.it/content/uploads/2019/12/algoritmo-1.jpeg"  title="Creazione di collegamenti in HTML"></a></td>
+		<td class="foto"><a href="https://help.typeform.com/hc/en-us/articles/360029116392-What-is-Logic-Jump-" target="d"><img style="max-width: 25vw;" src="https://www.focusjunior.it/content/uploads/2019/12/algoritmo-1.jpeg"  title="Creazione di collegamenti in HTML"></a></td>
 		<td class="testo">L'idea base di Nelson era di facilitare la scrittura non sequenziale, che dà al lettore una possibilità in più: quella di poter scegliere il proprio percorso. Il tutto utilizzando l'informatica. Espose questa idea il 24 agosto 1965 alla conferenza annuale dell'Association for Computing Machinery (ACM) a Cleveland. Titolo della relazione: "Una struttura di archivio per l'insieme, per il cambiamento e per l'indeterminato" (A File Structure for The Complex, The Changing and the Indeterminate). Definì la sua idea "elenchi a cerniera" (zippered lists). Questi elenchi permettevano ai documenti composti di essere formati da parti di altri documenti, un concetto definito transclusione. Essi andavano poi collegati (linkati diremmo oggi) ad altri documenti che presentavano argomenti simili.</td> 
 	</td></tr>
 	  
