--- a/ipertestualita.html
+++ b/ipertestualita.html
@@ -10,9 +10,8 @@
   <body style="background-color:powderblue;">
     <p ><strong style="color:red; font-family:Tomorrow; font-size:4vw" ><center>ARPANET e IPERTESTUALITA </center></strong></p>
 	<br><br>
-
-	  <div class="menul"style="padding-left:0px; background-color:green;">
-		  <a name="Inizio"></a>
+ <a name="Inizio"></a>
+	  <div class="menul"style="padding-left:0px; background-color:green;"
 		<a href="arpanet.html">ARPANET</a>
 		<a href="ipertestualita.html">Ipertestualità</a>
 		<a href="xanadu.html">Xanadu</a>
@@ -22,7 +21,7 @@
 <table class="tabella2" >
         <tr>
 	 <td class="testo">Un ipertesto è un insieme di documenti messi in relazione tra loro per mezzo di parole chiave. Può essere visto come una rete; i documenti ne costituiscono i nodi. La caratteristica principale di un ipertesto è che la lettura può svolgersi in maniera non lineare: qualsiasi documento della rete può essere "il successivo", in base alla scelta del lettore di quale parola chiave usare come collegamento. È possibile, infatti, leggere all'interno di un ipertesto tutti i documenti collegati alla relativa parola chiave marcata. La scelta di una parola chiave diversa porta all'apertura di un documento diverso: all'interno dell'ipertesto sono possibili praticamente infiniti percorsi di lettura.</td>
-          <td class="foto"><a href="https://it.wikipedia.org/wiki/Collegamento_ipertestuale" target="a"><img src="ipertesto.jpg " style="max-width:30vw" title="Prototipo di una console per la scrittura di ipertesti elettronici"  ></a></td>
+          <td class="foto"><a href="https://it.wikipedia.org/wiki/Collegamento_ipertestuale" target="a"><img src="ipertesto.jpg " style="max-width:25vw" title="Prototipo di una console per la scrittura di ipertesti elettronici"  ></a></td>
 		
         </tr>
 </table>
@@ -33,20 +32,29 @@
 		<td class="testo">L'ipertestualità è la caratteristica per cui un testo non è lineare e sequenziale, ma è costituito da parti (lessie o nodi), da ciascuna delle quali è possibile passare ad un'altra attraverso links rappresentati da segni convenzionali nel testo stesso (parole chiave, "bottoni" su cui si clicca). Un ipertesto offre un messaggio lineare solo finché si resta all'interno di un nodo. Il testo nel suo insieme è costituito da una rete multilineare in cui il fruitore può decidere liberamente quale percorso compiere passando da un nodo all'altro</td>
 	</tr>
 	  </table>
-<table class="tabella2">
-	<tr>
-		<td class="testo">Ci sono diversi tipi di link ipertestuali: <br>
-			<strong>Punto di vista</strong>:I link permettono il passaggio da un punto di vista a un altro all'interno del racconto. Cambiando la soggettiva può cambiare anche il soggetto narrante, includendo tra questi anche il narratore onniscente.<br>
-			<strong>Accessori</strong>:I link permettono di raggiungere delle parti testuali contenenti informazioni accessorie esterne al normale flusso del racconto (descrizioni, digressioni, note ecc.), rendendo più completa l'opera rispetto alla storia principale.<br>
-			<strong>Intrecci</strong>: I link permettono la navigazione tra più storie che si svolgono parallelamente nel tempo e che si incroceranno o che si sono incrociate, o che comunque saranno tra di loro legate in qualche punto. Le unità testuali trattano di una singola storia o di un insieme di storie, e nel secondo caso ha la funzione di un incrocio.<br> 
-			<strong>Accumulazione</strong>: I nodi rappresentano dei brevi momenti di una storia, la navigazione permette di costruire a poco a poco una visione generale della storia e arrivare per piccoli passi "casuali" al senso della storia. Questa avrà quindi una forma non definibile e sarà piuttosto un insieme di frammenti separati. <br> 
-			<strong>Salti nel tempo</strong>: I nodi rappresentano dei brevi momenti di una storia, la navigazione permette di costruire a poco a poco una visione generale della storia e arrivare per piccoli passi "casuali" al senso della storia. Questa avrà quindi una forma non definibile e sarà piuttosto un insieme di frammenti separati. <br>
-			<strong>Possibilità</strong>: I link rappresentano delle scelte che il lettore può effettuare all'interno della storia. Il lettore può prendere delle decisioni e il racconto svilupperà ciò che ha deciso. <br>
-			<strong>Tessere</strong>: Le unità testuali sono delle piccole porzioni di storia che assumono un determinato senso nel momento in cui sono inserite in un contesto, e a seconda dei contesti assumono significati differenti. La navigazione tramite link costruisce il contesto all'interno del quale le porzioni di testo assumono il proprio significato.
-L'analogia è con le tessere di un mosaico che assumono, a seconda della posizione nel contesto e delle tessere contigue, significati differenti. </td>
-		<td class="foto"><a href="" target="c"><img src="" title=""></a></td>
-	</tr>
-	  </table>
-<a href="#Inizio">Vai a inizio pagina</a>
+<p>Si può tecnicamemte definire come un modo di gestire le informazioni, dove i dati vengono memorizzati in una rete di nodi collegati da link.<br>
+	<strong>Nodi</strong> <br>
+
+	I nodi possono contenere testo, grafica, audio e video. Le informazioni contenute in un nodo sono rappresentate in una schermata: quindi è opportuno limitare il numero di parole del testo. Armonizzare suoni, immagini e testo è il problema principale da affrontrare nel progettare un nodo <br>
+	<strong>Link</strong><br>
+
+	I link (o collegamenti ipertestuali) collegano i nodi. Solitamente esiste una associazione fra le coppie di nodi collegati da un link. I link consentono all'utente di navigare all'interno della base informativa. Il mezzo più frequente per attivare un link è un "clic" con il mouse. Il link può essere collocato in qualunque punto dello schermo.<br>
+	<strong>Modello tipologico di un ipertesto</strong><br>
+A differenza del libro l'ipertesto consente diverse strutture topologiche e per ognuna dovranno essere utilizzati strumenti di orientamento e consultazione differenti. Il lettore deve sempre riuscire a riconoscere la struttura portante dell' ipertesto che sta consultando.<br>
+
+Le strutture fondamentali sono le seguenti:<br>
+	<stronger>Struttura sequenziale (media ipertestuale strutturato)</stronger><br>
+	è quella che maggiormente si avvicina al libro, l'informazione è organizzata a pagine. Ogni argomento è costituito da un'insieme di nodi, all'interno del quale la consultazione è sequenziale.
+
+Di solito il lettore, attraverso un indice o menù principale, può accedere all'argomento scelto, ovvero alle diverse sequenze di nodi.<br>
+
+	<stronger>Struttura sequenziale gerarchica</stronger><br>
+	è analoga alla precedente solo che ogni singola sequenza può a sua volta originare sequenze successive a livelli inferiori. Solitamente una struttura del genere si definisce ad albero con relativi radice, rami, sottorami e foglie. I link possono consentire sia l'esplorazione di tutto un ramo sino alle foglie oppure il passaggio da un ramo all'altro.
+<br>
+
+	<stronger>Struttura referenziale libera (media ipertestuale non strutturato)</stronger><br>
+		 non esiste una struttura prevalente e di conseguenza i link non rispettano percorsi lineari o sequenziali. La navigazione all'interno dell'ipertesto è del tutto libera, entro i limiti predisposti dall'autore.<br>
+
+	<a href="#Inizio">Vai a inizio pagina</a>
   </body>
 </html>
