--- a/arpanet.html
+++ b/arpanet.html
@@ -60,6 +60,6 @@
 		<td class="foto"><a href="https://it.wikipedia.org/wiki/MILNET" target="f"><img src="milnet.jpg" style="max-width:50vw" title="Logo Milnet"></a>
 	</tr>
 </table>
-	  <a href="#Inizio"><p class="testo">Vai a inizio pagina</p></a>
+	  <center><a href="#Inizio"><p class="testo">Vai a inizio pagina</p></a></center>
   </body>
 </html>
