--- a/ipertestualita.html
+++ b/ipertestualita.html
@@ -7,10 +7,10 @@
     <meta charset="utf-8">
     <title>ARPANET</title>
   </head>
+	 <a name="Inizio"></a>
   <body style="background-color:powderblue;">
     <p ><strong style="color:red; font-family:Tomorrow; font-size:4vw" ><center>ARPANET e IPERTESTUALITA </center></strong></p>
 	<br><br>
- <a name="Inizio"></a>
 	  <div class="menul"style="padding-left:0px; background-color:green;">
 		<a href="arpanet.html">ARPANET</a>
 		<a href="ipertestualita.html">Ipertestualità</a>
@@ -34,28 +34,28 @@
 	  </table>
 	  <br><br><br>
 <p class="testo">Si può tecnicamemte definire come un modo di gestire le informazioni, dove i dati vengono memorizzati in una rete di nodi collegati da link.<br><br>
-	<strong>Nodi</strong> <br><br>
+	<strong>Nodi</strong> <br>
 
 	I nodi possono contenere testo, grafica, audio e video. Le informazioni contenute in un nodo sono rappresentate in una schermata: quindi è opportuno limitare il numero di parole del testo. Armonizzare suoni, immagini e testo è il problema principale da affrontrare nel progettare un nodo <br><br>
-	<strong>Link</strong><br><br>
+	<strong>Link</strong><br>
 
 	I link (o collegamenti ipertestuali) collegano i nodi. Solitamente esiste una associazione fra le coppie di nodi collegati da un link. I link consentono all'utente di navigare all'interno della base informativa. Il mezzo più frequente per attivare un link è un "clic" con il mouse. Il link può essere collocato in qualunque punto dello schermo.<br><br>
 	<strong>Modello tipologico di un ipertesto</strong><br><br>
 A differenza del libro l'ipertesto consente diverse strutture topologiche e per ognuna dovranno essere utilizzati strumenti di orientamento e consultazione differenti. Il lettore deve sempre riuscire a riconoscere la struttura portante dell' ipertesto che sta consultando.<br><br>
 
 Le strutture fondamentali sono le seguenti:<br>
-	<stronger>Struttura sequenziale (media ipertestuale strutturato)</stronger><br><br>
+	<stronger>Struttura sequenziale (media ipertestuale strutturato)</stronger><br>
 	è quella che maggiormente si avvicina al libro, l'informazione è organizzata a pagine. Ogni argomento è costituito da un'insieme di nodi, all'interno del quale la consultazione è sequenziale.
 
 Di solito il lettore, attraverso un indice o menù principale, può accedere all'argomento scelto, ovvero alle diverse sequenze di nodi.<br><br>
 
-	<strong>Struttura sequenziale gerarchica</strong><br><br>
+	<strong>Struttura sequenziale gerarchica</strong><br>
 	è analoga alla precedente solo che ogni singola sequenza può a sua volta originare sequenze successive a livelli inferiori. Solitamente una struttura del genere si definisce ad albero con relativi radice, rami, sottorami e foglie. I link possono consentire sia l'esplorazione di tutto un ramo sino alle foglie oppure il passaggio da un ramo all'altro.
 <br><br>
 
 	<stronger>Struttura referenziale libera (media ipertestuale non strutturato)</stronger><br><br>
 		 non esiste una struttura prevalente e di conseguenza i link non rispettano percorsi lineari o sequenziali. La navigazione all'interno dell'ipertesto è del tutto libera, entro i limiti predisposti dall'autore.<br><br>
 	  </p>
-	<a href="#Inizio">Vai a inizio pagina</a>
+	  <center><a href="#Inizio"><p class="testo">Vai a inizio pagina</p></a></center>
   </body>
 </html>
