--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" type="text/css" href="css3.css" />
+      <link rel="stylesheet" type="text/css" href="css/css3.css" />
     <meta charset="utf-8">
     <title>ARPANET</title>
   </head>
